--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,4 +20,4 @@ setw -g window-status-content-attr bold,blink,reverse
 set -g status-fg white
 set -g status-bg blue
 set -g status-left ''
-set -g status-right '#[fg=white]#(hostname)|#(host `hostname` | cut -d " " -f 4)'
+set -g status-right '#[fg=white]#(hostname)'
